# fast-agent-vertex-rag

./: .gitignore  README.md  fastagent.secrets.yaml.example  pyproject.toml  vertex-rag.md  vertex_rag_tool.py
agents/: vertex-rag.md
demo/: scenario.md  youtube.md
